# appmetrica-datastream

./: README.md  datastream_settings.json  pyproject.toml
appmetrica_datastream/: __init__.py  client.py  exceptions.py
