[tool.poetry]
name = "appmetrica-datastream"
version = "0.1.0"
description = ""
authors = ["Oleg Ionov <ionov.dpmn@gmail.com>"]
readme = "README.md"
packages = [{include = "appmetrica_datastream"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
